[package]
name = "hyper-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
failure = "0.1"
jsonrpc = { git = "https://github.com/apoelstra/rust-jsonrpc" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc" }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"